arrumei as imagens

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Termodinâmica - Início</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/index.css">
+    <link rel="shortcut icon" href="imagens/temperatura.png" type="image/x-icon">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
             <div class="topo Flex">
                 <a href="index.html">
                     <div class="titulo">
-                        <img src="imagens/temperature.png" class="imgLogo">
+                        <img src="imagens/temperatura.png" class="imgLogo">
                         <h1 id="titulo">Termodinâmica</h1>
                     </div>
                 </a>
@@ -29,42 +30,40 @@
             <a href="leis-da-termodinamica.html">
                 <div class="artigo Flex">
                     <p>Leis da Termodinâmica</p>
-                    <img src="imagens/next.png" alt="icone-next">
+                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
                 </div>
             </a>
             <a href="gas-perfeito.html">
                 <div class="artigo Flex">
                     <p>Gás Perfeito</p>
-                    <img src="imagens/next.png" alt="icone-next">
+                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
                 </div>
             </a>
             <a href="maquina-de-carnot.html">
                 <div class="artigo Flex">
                     <p>Princípio e máquina de Carnot</p>
-                    <img src="imagens/next.png" alt="icone-next">
+                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
                 </div>
             </a>
             <a href="maquinas-termicas.html">
                 <div class="artigo Flex">
                     <p>Máquinas térmicas</p>
-                    <img src="imagens/next.png" alt="icone-next">
+                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
                 </div>
             </a>
 
             <div id="wpp-fisica">
                 <picture>
-                    <source media="(min-width: 1200px)" srcset="imagens/fisica-wallpaper01.jpg">
-                    <source media="(min-width: 992px)" srcset="imagens/fisica-wallpaper02.jpg">
-                    <source media="(min-width: 768px)" srcset="imagens/fisica-wallpaper03.jpg">
-                    <source media="(min-width: 576px)" srcset="imagens/fisica-wallpaper04.jpg">
-                    <img src="imagens/fisica-wallpaper05.jpg" alt="fisica-wallpaper" class="wwp-fisica">
+                    <source media="(min-width: 1200px)" srcset="imagens/fisica-wallpaper.jpg" width="800px">
+                    <source media="(min-width: 992px)" srcset="imagens/fisica-wallpaper.jpg" width="640px">
+                    <source media="(min-width: 768px)" srcset="imagens/fisica-wallpaper.jpg" width="480px">
+                    <source media="(min-width: 576px)" srcset="imagens/fisica-wallpaper.jpg" width="360px">
+                    <img src="imagens/fisica-wallpaper.jpg" alt="fisica-wallpaper" class="wwp-fisica" width="230px">
                 </picture>
             </div>
 
         </div>
     </main>
-
-    <script src="script/script.js"></script>
 
 </body>
 
