--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termodinâmica - Início</title>
+    <title>Dynamis - Início</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="stylesheet" href="estilo/index.css">
     <link rel="shortcut icon" href="imagens/temperatura.png" type="image/x-icon">
@@ -18,7 +18,7 @@
                 <a href="index.html">
                     <div class="titulo">
                         <img src="imagens/temperatura.png" class="imgLogo">
-                        <h1 id="titulo">Termodinâmica</h1>
+                        <h1 id="titulo">Dynamis</h1>
                     </div>
                 </a>
             </div>
