--- a/leis-da-termodinamica.html
+++ b/leis-da-termodinamica.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Termodinâmica - Leis da Termodinâmica</title>
+    <title>Dynamis - Leis da Termodinâmica</title>
     <link rel="stylesheet" href="estilo/style.css">
     <link rel="shortcut icon" href="imagens/temperatura.png" type="image/x-icon">
 </head>
@@ -17,7 +17,7 @@
                 <a href="index.html">
                     <div class="titulo">
                         <img src="imagens/temperatura.png" class="imgLogo">
-                        <h1 id="titulo">Termodinâmica</h1>
+                        <h1 id="titulo">Dynamis</h1>
                     </div>
                 </a>
                 <button type="button" class="btnHamburguer" id="hamburguer" onclick="slideMenu()">
