--- a/leis-da-termodinamica.html
+++ b/leis-da-termodinamica.html
@@ -30,12 +30,12 @@
         </div>
 
         <div class="menu" id="mostrarMenu">
-            <div class="containerConteudo">
+            <div class="containerHeader">
                 <ul>
-                    <li><a href="leis-da-termodinamica.html">Leis da Termodinâmica</a></li>
-                    <li><a href="gas-perfeito.html">Gás perfeito</a></li>
-                    <li><a href="maquina-de-carnot.html">Princípio e máquina de Carnot</a></li>
-                    <li><a href="maquinas-termicas.html">Maquinas térmicas</a></li>
+                    <li class="Flex"><a href="leis-da-termodinamica.html">Leis da Termodinâmica</a><img src="imagens/next.png" class="icone-next"></li>
+                    <li class="Flex"><a href="gas-perfeito.html">Gás perfeito</a><img src="imagens/next.png" class="icone-next"></li>
+                    <li class="Flex"><a href="maquina-de-carnot.html">Princípio e máquina de Carnot</a><img src="imagens/next.png" class="icone-next"></li>
+                    <li class="Flex"><a href="maquinas-termicas.html">Maquinas térmicas</a><img src="imagens/next.png" class="icone-next"></li>
                 </ul>
             </div>
         </div>
@@ -49,13 +49,13 @@
 
         <button type="button" class="btnRecursos" onclick="slideSetaCima()" id="setaCima">
             <div class="containerHeader">
-                <p>índice do artigo <img src="imagens/seta-dupla-para-cima.png" class="imgSeta" alt="Seta-para-cima">
+                <p id="barraRecursos">índice do artigo <img src="imagens/seta-dupla-para-cima.png" class="imgSeta" alt="Seta-para-cima">
                 </p>
             </div>
         </button>
 
         <aside class="recursos" id="mostrarRecursos">
-            <div class="containerConteudo">
+            <div class="containerHeader">
                 <ol>
                     <li><a href="#introducao">Introdução</a></li>
                     <li><a href="#desenvolvimento">Desenvolvimento</a></li>
