--- a/index.html
+++ b/index.html
@@ -1,70 +1,69 @@
-<!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dynamis - Início</title>
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="shortcut icon" href="imagens/logo-site.png" type="image/x-icon">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="estilo/main.css">
     <link rel="stylesheet" href="estilo/index.css">
-    <link rel="shortcut icon" href="imagens/temperatura.png" type="image/x-icon">
 </head>
 
 <body>
     <header>
-        <div class="containerHeader">
-            <div class="topo Flex">
-                <a href="index.html">
-                    <div class="titulo">
-                        <img src="imagens/temperatura.png" class="imgLogo">
-                        <h1 id="titulo">Dynamis</h1>
-                    </div>
-                </a>
-            </div>
+        <div class="headerContent topContainer">
+            <a href="index.html">
+                <div class="headerTop">
+                    <img src="imagens/logo-site.png" alt="Logo-site" width="35px">
+                    <h1>Dynamis</h1>
+                </div>
+            </a>
         </div>
     </header>
-
     <main>
-        <div class="inicio containerConteudo">
-            <a href="leis-da-termodinamica.html">
-                <div class="artigo Flex">
-                    <p>Leis da Termodinâmica</p>
-                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
+        <div class="contentContainer">
+            <h2>Nosso conteúdo:</h2>
+            <a href="artigo001.html">
+                <div class="boxArticle">
+                    <div class="border"></div>
+                    <div class="boxContent">
+                        <p>Leis da Termodinâmica</p>
+                        <span class="material-symbols-outlined">arrow_forward_ios</span>
+                    </div>
                 </div>
             </a>
-            <a href="gas-perfeito.html">
-                <div class="artigo Flex">
-                    <p>Gás Perfeito</p>
-                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
+            <a href="artigo002.html">
+                <div class="boxArticle">
+                    <div class="border"></div>
+                    <div class="boxContent">
+                        <p>Gás Perfeito</p>
+                        <span class="material-symbols-outlined">arrow_forward_ios</span>
+                    </div>
                 </div>
             </a>
-            <a href="maquina-de-carnot.html">
-                <div class="artigo Flex">
-                    <p>Princípio e máquina de Carnot</p>
-                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
+            <a href="artigo003.html">
+                <div class="boxArticle">
+                    <div class="border"></div>
+                    <div class="boxContent">
+                        <p>Princípio e Máquina de Carnot</p>
+                        <span class="material-symbols-outlined">arrow_forward_ios</span>
+                    </div>
                 </div>
             </a>
-            <a href="maquinas-termicas.html">
-                <div class="artigo Flex">
-                    <p>Máquinas térmicas</p>
-                    <img src="imagens/next.png" alt="icone-next" class="imgNext">
+            <a href="artigo004.html">
+                <div class="boxArticle">
+                    <div class="border"></div>
+                    <div class="boxContent">
+                        <p>Máquinas Térmicas</p>
+                        <span class="material-symbols-outlined">arrow_forward_ios</span>
+                    </div>
                 </div>
             </a>
-
-            <div id="wpp-fisica">
-                <picture>
-                    <source media="(min-width: 1200px)" srcset="imagens/fisica-wallpaper.jpg" width="800px">
-                    <source media="(min-width: 992px)" srcset="imagens/fisica-wallpaper.jpg" width="640px">
-                    <source media="(min-width: 768px)" srcset="imagens/fisica-wallpaper.jpg" width="480px">
-                    <source media="(min-width: 576px)" srcset="imagens/fisica-wallpaper.jpg" width="360px">
-                    <img src="imagens/fisica-wallpaper.jpg" alt="fisica-wallpaper" class="wwp-fisica" width="230px">
-                </picture>
-            </div>
-
         </div>
     </main>
-
 </body>
 
 </html>
