--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilo/main.css">
     <link rel="stylesheet" href="estilo/index.css">
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -62,6 +65,7 @@
                     </div>
                 </div>
             </a>
+            <img src="imagens/img-index.jpg" alt="img-index" id="img-index">
         </div>
     </main>
 </body>
